@startuml bims_database
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho

title BIMS-BE Database (with OTP verification)

' ========== Core auth ==========
class users {
  id: String PK
  email: String UK
  username: String UK
  password_hash: String
  role: Enum(CREATOR, BRAND, ADMIN)
  status: Enum(ACTIVE, SUSPENDED, BANNED)
  created_at: DateTime
  updated_at: DateTime
}

class otp_verifications {
  id: String PK
  email: String IDX
  otp_hash: String
  expires_at: DateTime
  used_at: DateTime
  created_at: DateTime
}

class auth_sessions {
  id: String PK
  user_id: String FK
  device_info: String
  ip_address: String
  user_agent: String
  is_active: Boolean
  created_at: DateTime
  last_used_at: DateTime
  expires_at: DateTime
}

class refresh_tokens {
  id: String PK
  session_id: String FK
  token_hash: String
  revoked: Boolean
  created_at: DateTime
  expires_at: DateTime
}

class login_audits {
  id: String PK
  user_id: String FK
  ip_address: String
  user_agent: String
  status: Enum(SUCCESS, FAILED)
  created_at: DateTime
}

' ========== Profile & roles ==========
class profiles {
  id: String PK
  user_id: String FK UK
  display_name: String
  bio: Text
  profile_picture_url: String
  country: String
  created_at: DateTime
  updated_at: DateTime
}

class creators {
  id: String PK
  user_id: String FK UK
  creator_type: Enum(FACE, FACELESS)
  name: String
  category: String
  reel_price: Float
  story_price: Float
  reel_story_price: Float
  state: String
  city: String
  language: String
  total_earnings: Float
  wallet_balance: Float
  verification_status: Enum(PENDING, VERIFIED, REJECTED)
}

class brands {
  id: String PK
  user_id: String FK UK
  company_name: String
  industry: String
  website: String
}

' ========== Campaigns ==========
class campaigns {
  id: String PK
  brand_id: String FK
  title: String
  category: String
  content_type: Enum(VIDEO, IMAGE)
  description: Text
  total_budget: Float
  used_budget: Float
  rate_per_million_views: Float
  max_submissions_per_account: Integer
  max_earnings_per_creator: Float
  max_earnings_per_post: Float
  start_date: Date
  end_date: Date
  status: Enum(ACTIVE, PAUSED, COMPLETED)
  logo_drive_link: String
  guidelines_link: String
  discord_link: String
  created_at: DateTime
}

class campaign_platforms {
  campaign_id: String PK,FK
  platform_id: String PK,FK
}

class platforms {
  id: String PK
  name: String UK
}

' ========== Social ==========
class social_accounts {
  id: String PK
  creator_id: String FK
  platform: Enum(TIKTOK, INSTAGRAM, YOUTUBE)
  platform_user_id: String
  username: String
  access_token: Text
  refresh_token: Text
  token_expiry: DateTime
  created_at: DateTime
}

class social_account_verifications {
  id: String PK
  creator_id: String FK
  platform: Enum(TIKTOK, INSTAGRAM, YOUTUBE)
  username: String
  verification_code: String UK
  status: Enum(CODE_ACTIVE, PENDING_VERIFICATION, PENDING, VERIFIED, FAILED, ERROR, REJECTED, EXPIRED)
  expires_at: DateTime
  created_at: DateTime
  completed_at: DateTime
  verified_at: DateTime
  verified_by_user_id: String FK
  social_account_id: String FK
}

class campaign_participations {
  id: String PK
  campaign_id: String FK
  creator_id: String FK
  status: Enum(APPLIED, APPROVED, REJECTED)
  total_submissions: Integer
  total_earned: Float
  joined_at: DateTime
}

class content_submissions {
  id: String PK
  campaign_id: String FK
  creator_id: String FK
  social_account_id: String FK
  content_url: Text
  platform_content_id: String
  verified_views: Integer
  calculated_earnings: Float
  status: Enum(PENDING, APPROVED, REJECTED)
  submitted_at: DateTime
}

' ========== Economy ==========
class payouts {
  id: String PK
  creator_id: String FK
  amount: Float
  status: Enum(PENDING, PROCESSED, FAILED)
  requested_at: DateTime
  paid_at: DateTime
}

class leaderboard_entries {
  id: String PK
  campaign_id: String FK
  creator_id: String FK
  rank: Integer
  total_submissions: Integer
  total_earned: Float
  updated_at: DateTime
}

' ========== Notifications ==========
class notifications {
  id: String PK
  user_id: String FK
  type: Enum(NotificationType)
  title: String
  message: Text
  data: JSON
  is_read: Boolean
  created_at: DateTime
  read_at: DateTime
}

' ========== Relationships ==========
users "1" -- "0..*" auth_sessions : user_id
users "1" -- "0..*" login_audits : user_id
users "1" -- "0..1" profiles : user_id
users "1" -- "0..1" creators : user_id
users "1" -- "0..1" brands : user_id
users "1" -- "0..*" notifications : user_id

auth_sessions "1" -- "0..*" refresh_tokens : session_id

brands "1" -- "0..*" campaigns : brand_id
campaigns "1" -- "0..*" campaign_platforms : campaign_id
platforms "1" -- "0..*" campaign_platforms : platform_id

creators "1" -- "0..*" social_accounts : creator_id
creators "1" -- "0..*" social_account_verifications : creator_id
users "0..1" -- "0..*" social_account_verifications : verified_by_user_id
social_accounts "0..1" -- "0..*" social_account_verifications : social_account_id

campaigns "1" -- "0..*" campaign_participations : campaign_id
creators "1" -- "0..*" campaign_participations : creator_id
campaigns "1" -- "0..*" content_submissions : campaign_id
creators "1" -- "0..*" content_submissions : creator_id
social_accounts "1" -- "0..*" content_submissions : social_account_id

creators "1" -- "0..*" payouts : creator_id
campaigns "1" -- "0..*" leaderboard_entries : campaign_id
creators "1" -- "0..*" leaderboard_entries : creator_id

note right of otp_verifications
  **New:** OTP for email verification
  during registration. No FK to users.
  OTP expires in 10 min; used_at set
  when registration is completed.
end note

@enduml
